@@ -16,6 +16,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       jobs exiting prematurely.
   b - fixed a bug in tcp_puts where not enough memory was getting allocated for
       incoming data. TRQ-969
+  b - fix server crash caused by gpu mode not being right after gpus=x:. TRQ-948.
+      (backported from 4.0.3)
 
 3.0.5
   b - fix for writing too much data when job_script is saved to job log.
